--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ read-url = ["reqwest", "futures"]
 bytes = "1"
 csv = "1.1"
 derivative = "2.1"
+# serde = { version = "1.0", features = ["derive"] }
 serde = "1.0"
 serde_derive = "1.0"
 chrono = "0.4"
