--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ csv = "1.1"
 derivative = "2.1"
 # serde = { version = "1.0", features = ["derive"] }
 serde = "1.0"
+serde_repr = "0.1"
 serde_derive = "1.0"
 chrono = "0.4"
 itertools = "0.10"
